# sakila_lab_lucas_lindh

./: .gitignore  README.md  dlt_script.py  main.py  pyproject.toml
dashboard/.evidence/customization/: .profile.json
dashboard/pages/: sakila.md
dashboard/sources/sakila/: cities_with_most_customers.sql  connection.yaml  longest_films.sql  most_rentals_category.sql  most_rentals_movies.sql  most_rentals_per_country.sql  rating_distribution.sql  revenue_per_category.sql  top_customers.sql
notebooks/: data_ingestion.ipynb  eda_sakila.ipynb
sql/: eda_sakila.sql  load_sakila.sql
