[project]
name = "sakila-lab-lucas-lindh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb,parquet,sql-database]>=1.20.0",
    "duckdb>=1.4.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
]
